--- a/Projekt/Projekt.csproj
+++ b/Projekt/Projekt.csproj
@@ -20,4 +20,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Email\YourEmails.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Email\YourEmails.cshtml" />
+  </ItemGroup>
+
 </Project>
